Made the bin size slider works

--- a/notebooks/image_range_normalization.ipynb
+++ b/notebooks/image_range_normalization.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false,
     "format": "tab",
@@ -562,234 +562,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n"
-     ]
     }
    ],
    "source": [
@@ -972,9 +744,16 @@
     "                image_array.append(_data_dest)\n",
     "                \n",
     "            #debugging here    \n",
+    "        \n",
+    "            _shape = np.shape(image_array)\n",
+    "            _step = 1\n",
+    "            if _shape[1] > 1:\n",
+    "                self.ui.bin_size_slider.setMaximum(_shape[1]-1)\n",
+    "            if _shape[1] > 10:\n",
+    "                _step = np.int(_shape[1] / 10)\n",
     "\n",
-    "            self.ui.bin_size_slider.setMaximum(len(image_array[0]-1))\n",
     "            self.ui.bin_size_slider.setValue(0)\n",
+    "            self.ui.bin_size_slider.setTickInterval(_step)\n",
     "                    \n",
     "        self.image_stack = image_array\n",
     "            \n",
